# ROSMicroPy

./: .gitmodules  README.md  ROSMicroPy.code-workspace  build-esp32flash-image  buildRelease  buildRelease.sh  build_RMPCore_C6.sh  build_RMPCore_Generic.sh  build_RMPCore_S3.sh  build_RMP_CAM_Generic.sh  build_RMP_CAM_S3.sh  flags  flash  microros-C6-Support.diff  mkdirs.sh  startDevEnv  startESP32Flash  startROSConsole  startROSControlPlane
.mpy-workbench/: .mpyignore
.waylog/history/: 2026-05-28_02-24Z-in_the_components_libROSMicroPy_directory_create_a.md
3D Models/RMP_Control_Plane/OrangePi 2W/: LICENSE.txt  README.txt
3D Models/RMP_Control_Plane/OrangePi 2W/files/: OrangePi_Zero_2W_Bottom.STL  OrangePi_Zero_2W_Slim_Case.STEP  OrangePi_Zero_2W_Top.STL  OrangePi_Zero_2W_Top_CPU_And_Ram_Cutouts.STL
boards/RMP_ESPCAM/: mpconfigboard.cmake
boards/RMP_ESPCAM_S3/: mpconfigboard.cmake
boards/RMP_ESPCAM_S3/main/: CMakeLists.txt
boards/RMP_LCD_CONTROLLER/: mpconfigboard.cmake
boards/RMP_LCD_CONTROLLER/main/: CMakeLists.txt
boards/RMP_WROOM1_S3/main/: CMakeLists.txt
boards/RMP_WROVER_B/: mpconfigboard.cmake  sdkconfig.board
boards/RMP_WROVER_B/main/: CMakeLists.txt
boards/esp32/: sdkconfig.cam  sdkconfig.compiler.debug  sdkconfig.lvgl  sdkconfig.menuconfig  sdkconfig.microros
boards/esp32/RMP_CAM_GENERIC/: mpconfigboard.cmake
boards/esp32/RMP_CAM_S3/: mpconfigboard.cmake  sdkconfig.board
boards/esp32/RMP_CAM_S3/main2/: CMakeLists.txt  idf_component.yml
boards/esp32/RMP_CORE_C6/: mpconfigboard.cmake
boards/esp32/RMP_CORE_C6/main2/: CMakeLists.txt  idf_component.yml
boards/esp32/RMP_CORE_GENERIC/: mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
boards/esp32/RMP_CORE_GENERIC/main2/: CMakeLists.txt  idf_component.yml
boards/esp32/RMP_CORE_S3/: mpconfigboard.cmake  mpconfigboard.h  mpconfigvariant_FLASH_4M.cmake  sdkconfig.board  sdkconfig.flash_4m
boards/esp32/RMP_CORE_S3/main2/: idf_component.yml
boards/esp32/RMP_ESPCAM/main2/: CMakeLists.txt  idf_component.yml
boards/esp32/RMP_LCD_CONTROLLER/: mpconfigboard.cmake  sdkconfig.board
boards/esp32/RMP_LCD_CONTROLLER/main2/: CMakeLists.txt  idf_component.yml
boards/esp32/RMP_WROOM1_S3/: mpconfigboard.cmake
boards/esp32/RMP_WROOM1_S3/main2/: idf_component.yml
boards/esp32/RMP_WROVER_B/: mpconfigboard.cmake
components/: CMakeLists.txt  NATIVE_MPY_EVALUATION.md  prepare_microros.sh
components/libROSMicroPy/: manifest.py  micropython.cmake
components/libROSMicroPy/mp_uros_modules/: mp_uros_thread.c  uros_base_func.c  uros_mesg_func.c
components/libROSMicroPy/mp_uros_type_support/: mp_uros_dataTypeParser.c  mp_uros_dataTypeParser.h  mp_uros_type_support.c  mp_uros_type_support.h
components/libROSMicroPy/py/: rclpy.py.disabled  rosmicropy_interfaces.py
components/libROSMicroPy/py/action_msgs/msg/: GoalInfo.py  GoalStatus.py  GoalStatusArray.py  __init__.py  _types.py
components/libROSMicroPy/py/action_msgs/srv/: CancelGoal.py  CancelGoal_Request.py  CancelGoal_Response.py  __init__.py  _types.py
components/libROSMicroPy/py/actionlib_msgs/msg/: GoalID.py  GoalStatus.py  GoalStatusArray.py  __init__.py  _types.py
components/libROSMicroPy/py/builtin_interfaces/msg/: Duration.py  Time.py  __init__.py  _types.py
components/libROSMicroPy/py/nav_msgs/msg/: Path.py  (+9 more)
components/libROSMicroPy/py/rclpy/: __init__.py  node.py  qos.py
components/micropython-helpers/: CMakeLists.txt  micropython.cmake
components/native/: native_mpy_compat.c
docker/: Dockerfile-IDF51.DevEnvironment  Dockerfile-IDF55.DevEnvironment  Dockerfile-rosmicropy-esp32flash  Dockerfile.ROSConsole  Dockerfile.ROSControlPlane  flasher_init_scripts.sh
docs/: Logo.xcf  README.md  configuration-and-startup.md  manifest.json  micropython-sdk-guide.md  rclpy-guide.md  sync-firmware.sh  technical-architecture.md  type-support-and-serialization.md  user-guide.md
docs/getting-started/: FirstROSRobot-Assembly.md  FirstROSRobot-BOM.MD  FirstROSRobot-BOM.md  FirstROSRobot.MD  LearnMore.md  basic-example.md  installl-on-esp32.md
docs/getting-started/basic-ros-example/: basic-example.md
docs/getting-started/first-robot/: FirstROSRobot-BOM.md  FirstROSRobot.md
docs/getting-started/flash-code-on-device/: installl-on-esp32.md
examples/: wifi.py
examples/deprecated/other/: espcam_test.py
examples/rclpy_pubsub/: package.json
modules/libROSMicroPy/: micropython.cmake
modules/libROSMicroPy/mp_uros_type_support/: mp_uros_dataTypeParser.c  mp_uros_dataTypeParser.h  mp_uros_type_support.c
modules/libROSMicroPyESPCAM/: micropython.cmake
modules/libROSMicroPyESPCAM/publisher/: rmp_cam_publisher.c
modules/lib_ROSMicroPyWidgets/widgets/ros-video/: ros_video_widget.cpp
modules/micropython-helpers/: micropython.cmake  mp_helpers.cpp  mp_helpers.h
natmod/: CMakeLists.txt  NATIVE_MPY_EVALUATION.md  build_native_mpy.sh  generate_mpy_externs.sh  prepare_microros.sh
natmod/libROSMicroPy/: micropython.cmake
natmod/libROSMicroPy/mp_uros_modules/: mp_obj_tools.c  uros_base_func.c  uros_mesg_func.c
natmod/micropython-helpers/: mp_helpers.cpp
natmod/native/: ROSMicroPy.c  sdkconfig.h
natmod/tools/: mpy_ld_rosmicropy.py
old_docs/archive/: LearnMore copy.md
old_docs/building/: build_from_source.md
old_docs/images/: ROSMicroPy-Logo2.xcf
python_example_code/: wifi.py
python_example_code/rclpy/: config.py  publisher.py  subscriber.py
readme_docs/: rclpy-guide.md  technical-architecture.md
release/: bootloader.elf  bootloader.map
release/mpy/configure/esp32s2/: security.conf  spi_download.conf  utility.conf
release/mpy/configure/esp32s3/: security.conf  spi_download.conf
release/mpy/doc/: release_note.txt
release/mpy/logs/: 84F703D9F0BE.txt  DC5475D8E028.txt  DC5475D8E040.txt
ros_tests/image_view/install/: local_setup.sh  setup.sh
ros_tests/image_view/log/: latest_build
ros_tests/image_view/src/image_view/: setup.cfg  setup.py
ros_tests/image_view/src/python_package_with_a_node/: package.xml  setup.py
tools/: generate_rosmicropy_interfaces.py
web-loader/: index.html  sync-firmware.sh
(+325 files in other folders)
